# Emergency-Medical-Fund

./: .env.example  .gitignore  Cargo.toml  README.md
.github/: COMMIT_TEMPLATE.md
.github/workflows/: ci.yml
contracts/care_token/: Cargo.toml
contracts/care_token/src/: lib.rs
contracts/hospital_verification/: Cargo.toml
contracts/hospital_verification/src/: lib.rs
contracts/medical_fund/: Cargo.toml
contracts/medical_fund/src/: lib.rs
docs/screenshots/: README.md
frontend/: package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/campaign/[id]/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/components/: CampaignCard.tsx  MilestoneCard.tsx  Navbar.tsx  StatsBar.tsx  TransactionStatus.tsx
frontend/src/config/: contracts.json  contracts.json.example  stellar.ts
frontend/src/context/: WalletContext.tsx
frontend/src/hooks/: useCampaigns.ts  useContracts.ts
frontend/src/lib/: utils.ts
scripts/: deploy.sh
