[package]
name = "medical_fund"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils", "alloc"] }
hospital_verification = { path = "../hospital_verification", features = ["testutils"] }
care_token = { path = "../care_token", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
